fixed errors