@@ -93,7 +93,7 @@ public class Polygon extends Geometry {
     /**
      * Calculates intersections between the ray and this polygon.
      *
-     * @param ray ray to intersect with the polygon
+     * @param ray         ray to intersect with the polygon
      * @param maxDistance maximal allowed distance from the ray origin
      * @return geometry-aware intersections, or {@code null} if there are none
      */
@@ -102,7 +102,7 @@ public class Polygon extends Geometry {
         List<Intersection> planeIntersections = _plane.calcIntersections(ray, maxDistance);
         if (planeIntersections == null) return null;
 
-        Point p = planeIntersections.get(0).point;
+        Point p = planeIntersections.getFirst().point;
         Vector n = _plane.getNormal(p);
 
         double sign = 0;
